# USV-Guidance-System

./: .gitignore  Dockerfile.Main  LICENSE  README.md
.devcontainer/: devcontainer.json
scripts/: install_dependencies.sh
usv_colav/: CMakeLists.txt  package.xml  setup.py
usv_colav/config/: colav.yaml
usv_colav/include/usv_colav/: colav.h  sb_mpc.h
usv_colav/launch/: colav.launch
usv_colav/scripts/: debug_colav.py  debug_colav_iterative.py
usv_colav/src/: colav.cpp  colav_node.cpp  sb_mpc.cpp  sb_mpc_node.cpp
usv_colav/usv_mission_planner/: CMakeLists.txt  package.xml
usv_map/: CMakeLists.txt  package.xml  setup.py
usv_map/config/: map_preprocessing.yaml  map_preprocessor_debug.yaml  map_service.yaml
usv_map/data/mission_regions/outside_new_york/: check_db_lite.sqlite  quadtree_graph  voronoi.sqlite
usv_map/include/usv_map/: geotf_ros.h  geotf_server.h  geotf_sync.h  jc_voronoi.h  map_preprocessor.h  map_service.h  quadtree.h  region.h  skeleton_generator.h
usv_map/launch/: default.launch  map_preprocessor.launch  map_preprocessor_debug.launch  test_artificial_field.launch
usv_map/msg/: ENU.msg  EPSG.msg  RemoveFrame.msg
usv_map/scripts/: test_client.py  test_distance_concept.py  visualize_artificial_fields.py
usv_map/src/: geotf_ros.cpp  geotf_ros_node.cpp  geotf_server.cpp  geotf_server_node.cpp  geotf_sync.cpp  jc_voronoi.cpp  map_preprocessor.cpp  map_preprocessor_node.cpp  map_service.cpp  map_service_node.cpp  quadtree.cpp  region.cpp  skeleton_generator.cpp  test_artificial_field.cpp  test_distance_calc.cpp  test_distance_concept.cpp  test_map_preprocessor.cpp  test_map_service.cpp  test_services.cpp
usv_map/src/usv_map/: geotf_client.py
usv_map/srv/: add_frame.srv  distance.srv  frame_conversion.srv  intersect.srv
usv_mission_planner/: CMakeLists.txt  package.xml
usv_mission_planner/config/: mission_planner.yaml
usv_mission_planner/data/: head_on_obst.csv  head_on_usv.csv  test_grounding_avoidance.csv
usv_mission_planner/data/debug/hybrid_astar/: came_from.csv  closed.csv  debug.csv  explored_file.csv  frontier.csv  path.csv
usv_mission_planner/data/missions/testmission/: debug.gpx
usv_mission_planner/data/quadtrees/test_quadtree_copy/: quadtree.sqlite  test_quadtree_copy
usv_mission_planner/include/usv_mission_planner/: astar.h  dubins.h  flexible_priority_queue.h  graph_builder.h  hybrid_astar.h  mission_planner.h  priority_queue.h  quadtree.h  region.h
usv_mission_planner/launch/: atloy_mission.launch  full_mission_test.launch  mission_planner.launch  mission_planner_client.launch  ny_mission.launch  ryfylke_mission.launch  ryfylke_mission2.launch  ryfylke_mission3.launch  test.launch  test_astar.launch  test_dubin.launch  test_quadtree.launch  tss_mission.launch  tss_mission2.launch
usv_mission_planner/scripts/: debug_astar.py  debug_dubin.py  debug_hybrid_astar.py  debug_single_astar_search.py  static_mission_planner_node.py
usv_mission_planner/src/: astar.cpp  dubins.cpp  graph_builder.cpp  hybrid_astar.cpp  mission_planner.cpp  mission_planner_client_node.cpp  mission_planner_node.cpp  quadtree.cpp  region.cpp  test_astar.cpp  test_graph_builder.cpp  test_quadtree.cpp
usv_mission_planner/srv/: search.srv
usv_model/: CMakeLists.txt  package.xml
usv_model/include/usv_model/: model_library.h
usv_model/src/: model_library.cpp  test_integration.cpp
usv_msgs/: CMakeLists.txt  package.xml
usv_msgs/msg/: Colav.msg  ColavPath.msg  ColavPathElement.msg  reinit.msg
usv_path_trackers/: CMakeLists.txt  package.xml  setup.py
usv_path_trackers/data/: test_waypoints.csv
usv_path_trackers/scripts/: los_controller_node.py  los_controller_node_obstacle.py  los_controller_node_usv.py  los_controller_turn_radius_enforcer.py  test_los_node.py
usv_path_trackers/src/usv_path_trackers/: los.py  los_obstacle.py  los_usv.py  turn_radius_enforcer.py
usv_realtime_recorder/: CMakeLists.txt  package.xml
usv_realtime_recorder/include/usv_realtime_recorder/: recorder.h
usv_realtime_recorder/launch/: recorder.launch
usv_realtime_recorder/src/: recorder.cpp  recorder_node.cpp
usv_rosbag_recorder/: CMakeLists.txt  package.xml
usv_rosbag_recorder/include/usv_rosbag_recorder/: recorder.h
usv_rosbag_recorder/launch/: recorder.launch
usv_rosbag_recorder/src/: recorder.cpp  recorder_node.cpp
usv_simulator/: CMakeLists.txt  package.xml  setup.py
usv_simulator/config/models/: ship1.urdf  viknes.urdf
usv_simulator/config/monte_carlo_supervisor/: follower_1.yaml  follower_template.yaml  leader.yaml
usv_simulator/config/rviz/: config.rviz  debug_child_region.rviz  default.rviz  default_2x.rviz  show_track.rviz
usv_simulator/include/usv_simulator/: monte_carlo_supervisor.h  sim_land.h  sim_system_visualization.h  sim_tracker.h  sim_vessel.h
usv_simulator/launch/: crossing_right_scenario.launch  crossing_right_scenario_2x.launch  default.launch  evaluate_turn_radius.launch  full_mission.launch  head_on_scenario.launch  head_on_scenario_2x.launch  head_on_test.launch  land_only.launch  monte_carlo.launch  overtake_scenario.launch
usv_simulator/maps/: check_db.sqlite
usv_simulator/meshes/: polyHazardsCorrect.stl
usv_simulator/msg/: Polygon64.msg  PolygonArray64.msg  obstacle.msg
usv_simulator/rviz/: sim.rviz  test_polygon_viz.rviz
usv_simulator/src/: monte_carlo_supervisor.cpp  monte_carlo_supervisor_node.cpp  sim_land.cpp  sim_land_node.cpp  sim_system_visualization.cpp  sim_system_visualization_node.cpp  sim_tracker.cpp  sim_tracker_node.cpp  sim_vessel.cpp  sim_vessel_node.cpp
