<?xml version="1.0"?>
<package format="2">
  <name>usv_map</name>
  <version>1.0.0</version>
  <description>The usv_simulator package</description>

  <maintainer email="sanderfu@stud.ntnu.no">Sander Furre</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>roslib</depend>
  <depend>geotf</depend>
  <depend>planner_common</depend>
  <depend>enc_extraction</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <test_depend>rosunit</test_depend>

</package>