<?xml version="1.0"?>
<package format="2">
  <name>usv_mission_planner</name>
  <version>0.0.1</version>
  <description>The usv_mission_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sanderfu@stud.ntnu.no">Sander Furre</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>usv_model</depend>
  <depend>tf</depend>
  <depend>roslib</depend>
  <depend>geotf</depend>
  <depend>planner_common</depend>
  <depend>usv_map</depend>
  <test_depend>rosunit</test_depend>

</package>