<?xml version="1.0"?>
<package format="2">
  <name>usv_model</name>
  <version>1.0.0</version>
  <description>The usv_model package</description>

  <maintainer email="sanderfu@stud.ntnu.no">Sander Furre</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>

</package>