<?xml version="1.0"?>
<package format="2">
  <name>usv_msgs</name>
  <version>0.0.1</version>
  <description>The usv_msgs package</description>

  <maintainer email="sanderfu@stud.ntnu.no">Sander Furre</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>