<?xml version="1.0"?>
<package format="2">
  <name>usv_path_trackers</name>
  <version>1.0.0</version>
  <description>The usv_path_trackers package</description>

  <maintainer email="sanderfu@stud.ntnu.no">Sander Furre</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>roslib</depend>
  <depend>usv_map</depend>

</package>