<?xml version="1.0"?>
<package format="2">
  <name>usv_realtime_recorder</name>
  <version>1.0.0</version>
  <description>The usv_realtime_recorder package</description>

  <maintainer email="sanderfu@stud.ntnu.no">Sander Furre</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>usv_msgs</depend>
  <depend>rosbag</depend>
  <test_depend>rosunit</test_depend>

</package>