<?xml version="1.0"?>
<package format="2">
  <name>usv_simulator</name>
  <version>1.0.0</version>
  <description>The usv_simulator package</description>

  <maintainer email="sanderfu@stud.ntnu.no">Sander Furre</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>usv_model</depend>
  <depend>tf</depend>
  <depend>roslib</depend>
  <depend>geotf</depend>
  <depend>nav_msgs</depend>
  <depend>usv_map</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>usv_mission_planner</depend>
  <depend>usv_msgs</depend>
  <test_depend>rosunit</test_depend>

</package>